@@ -1,0 +1,7 @@
+import sys
+sys.path.insert(0, "../gdb")
+
+import ldmud
+ldmud.register_printers()
+
+print "LDMud 3.5 pretty printers loaded."
