@@ -1,6 +1,10 @@
 This file lists all changes made to the game driver in all glory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+27-Jan-2010 (Gnomi)
+  - Added pretty printers for GDB7 for the main data structures.
+    (src/ldmud-gdb.py, gdb/*)
+
 25-Jan-2010 (Gnomi)
   - add_action() leaked the function name string. (#713)
     (actions.c)
